# Chip-8-Emulator-rs

./: Cargo.toml  README.md
src/: chip8.rs  chip8_instruction_set.rs  cli.rs  main.rs
