[package]
name = "chip8-rs-dmfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raqote = "0.8.1"
lazy_static = "1.4.0"
rand = "0.8.5"
minifb = "0.23.0"
indicatif = "0.17.0"
log = "0.4.17"
clap = {version="3.2.20", features=['derive']}